Fix bug cannot scrool menu on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -287,9 +287,9 @@ a {
       background-color: #D9D9DE; }
   @media (max-width: 867px) {
     .sidebar {
-      position: fixed;
-      top: 0rem;
-      left: 0rem;
+      position: absolute;
+      top: -8.3rem;
+      height: 100vh;
       box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
       transition: transform 200ms ease;
       transform: translateX(-100%); } }
@@ -324,11 +324,15 @@ a {
   @media (min-width: 868px) and (max-width: 1023px) {
     .sidebar-section-item {
       padding-top: 1.2rem;
-      padding-bottom: 1.2rem; } }
+      padding-bottom: 1.2rem; }
+      .sidebar-section-item:hover {
+        background-color: transparent; } }
   @media (max-width: 867px) {
     .sidebar-section-item {
       padding-top: 1.2rem;
-      padding-bottom: 1.2rem; } }
+      padding-bottom: 1.2rem; }
+      .sidebar-section-item:hover {
+        background-color: transparent; } }
 
 .sidebar-section-item__type {
   font-size: 1.3rem; }
@@ -426,10 +430,7 @@ a {
   @media (max-width: 867px) {
     .results-item:hover {
       background-color: unset;
-      border: 1px solid transparent; }
-    .results-item:active {
-      background-color: #c6e6f3;
-      border: 1px solid #71c1e2; } }
+      border: 1px solid transparent; } }
 
 .results-item__img {
   height: 8rem;
