--- a/src/styles/modules/_results_item.scss
+++ b/src/styles/modules/_results_item.scss
@@ -21,10 +21,6 @@
       background-color: unset;
       border: 1px solid transparent;
     }
-
-    &:active {
-      @include blue-highlight;
-    }
   }
 }
 
