--- a/src/styles/modules/_sidebar.scss
+++ b/src/styles/modules/_sidebar.scss
@@ -18,9 +18,9 @@
   }
 
   @include phone {
-    position: fixed;
-    top: 0rem;
-    left: 0rem;
+    position: absolute;
+    top: -8.3rem;
+    height: 100vh;
     box-shadow: 0 0 1rem rgba(0,0,0,0.1);
     transition: transform 200ms ease;
     transform: translateX(-100%);
