--- a/src/styles/modules/_sidebar_section_item.scss
+++ b/src/styles/modules/_sidebar_section_item.scss
@@ -26,10 +26,16 @@
 
   @include tablet {
     @include large-buttons;
+    &:hover {
+      background-color: transparent;
+    }
   }
 
   @include phone {
     @include large-buttons;
+    &:hover {
+      background-color: transparent;
+    }
   }
 }
 
